--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "fs-extra": "^7.0.1",
+    "html-autoprefixer": "^0.3.8",
     "parse5": "^5.1.0",
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
