--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
     "test": "tests"
   },
   "dependencies": {
+    "autoprefixer": "^9.4.7",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
+    "deep-extend": "^0.6.0",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "fs-extra": "^7.0.1",
-    "html-autoprefixer": "^0.3.8",
+    "html-postcss": "^0.1.2",
     "parse5": "^5.1.0",
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
