--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
     "test": "tests"
   },
   "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "autoprefixer": "^9.4.7",
-    "babel-core": "^6.26.3",
     "babel-preset-minify": "^0.5.0",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
