--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "parse5": "^5.1.0",
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
-    "polymer-bundler": "^3.1.1"
+    "polymer-bundler": "^3.1.1",
+    "polymer-project-builder": "^1.1.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
