chore(npmignore): exclude config files from package

--- a/.npmignore
+++ b/.npmignore
@@ -14,6 +14,12 @@
 /.eslintrc.js
 /.gitignore
 /.template-lintrc.js
+/.commitlintrc.js
+/.huskyrc.js
+/.nycrc.json
+/.releaserc
+/greenkeeper.json
+/jsconfig.json
 /.travis.yml
 /.watchmanconfig
 /bower.json
