--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ember/optional-features": "^0.7.0",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
+    "@vaadin/vaadin-checkbox": "^2.2.8",
     "bower": "^1.8.4",
     "commitizen": "^3.0.5",
     "console-ui": "^3.0.0",
@@ -76,19 +77,24 @@
     "test": "tests"
   },
   "dependencies": {
+    "@open-wc/webpack": "^0.1.6",
     "autoprefixer": "^9.4.7",
+    "babel-loader": "^8.0.6",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
+    "decamelize": "^3.2.0",
     "deep-extend": "^0.6.0",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "fs-extra": "^7.0.1",
     "html-postcss": "^0.1.2",
+    "html-webpack-plugin": "^3.2.0",
     "parse5": "^5.1.0",
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
     "polymer-bundler": "^3.1.1",
-    "polymer-project-builder": "^1.1.0"
+    "polymer-project-builder": "^1.1.0",
+    "webpack": "^4.32.2"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
