--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/cli": "^7.3.2",
     "@commitlint/config-conventional": "^7.3.1",
     "@ember/optional-features": "^0.7.0",
+    "@kuscamara/sample-lit-element": "^1.0.7",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
     "@vaadin/vaadin-checkbox": "^2.2.8",
