--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "nyc": "^13.1.0",
     "qunit-dom": "^0.8.0",
     "rimraf": "^2.6.3",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "wired-button": "^1.0.0"
   },
   "keywords": [
     "ember-addon",
