--- a/.releaserc
+++ b/.releaserc
@@ -9,5 +9,12 @@
         "@semantic-release/npm",
         "@semantic-release/git",
         "@semantic-release/github"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/exec", {
+          "publishCmd": "npx ember deploy production --verbose"
+        }
+      ]
     ]
 }
