--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "console-ui": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
     "ember-cli": "~3.7.1",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-git": "^1.3.3",
+    "ember-cli-deploy-git-ci": "^1.0.1",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
@@ -92,7 +96,7 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "https://dunnkers.github.io/ember-polymer/"
+    "demoURL": "https://bbvaengineering.github.io/ember-cli-polymer-bundler"
   },
   "config": {
     "commitizen": {
