--- a/package.json
+++ b/package.json
@@ -76,9 +76,12 @@
     "test": "tests"
   },
   "dependencies": {
+    "@babel/core": "^7.9.0",
     "autoprefixer": "^9.4.7",
+    "babel-plugin-iife-wrap": "^1.1.0",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
+    "cheerio": "^1.0.0-rc.3",
     "deep-extend": "^0.6.0",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
