--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^9.4.7",
     "babel-plugin-iife-wrap": "^1.1.0",
+    "babel-preset-minify": "^0.5.1",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
     "cheerio": "^1.0.0-rc.3",
@@ -91,7 +93,7 @@
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
     "polymer-bundler": "^3.1.1",
-    "polymer-project-builder": "git+https://github.com/BBVAEngineering/polymer-project-builder#9a54c06d29c26f"
+    "polymer-project-builder": "git+https://github.com/BBVAEngineering/polymer-project-builder#feature/DB-189923-wrap-bundle-in-iife"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
