--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commit": "git-cz",
     "posttest": "npm run merge-coverage && npm run report-coverage && npm run check-coverage",
     "report-coverage": "istanbul report --include=coverage/coverage-final.json text",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "postinstall": "patch-package"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
@@ -54,6 +55,7 @@
     "loader.js": "^4.7.0",
     "mocha": "^5.0.0",
     "nyc": "^13.1.0",
+    "patch-package": "^6.2.2",
     "qunit-dom": "^0.8.0",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.3"
@@ -76,7 +78,9 @@
     "test": "tests"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^9.4.7",
+    "babel-preset-minify": "^0.5.1",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
     "deep-extend": "^0.6.0",
@@ -88,7 +92,8 @@
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
     "polymer-bundler": "^3.1.1",
-    "polymer-project-builder": "^1.1.0"
+    "polymer-project-builder": "git+https://github.com/BBVAEngineering/polymer-project-builder#feature/DB-189923-wrap-bundle-in-iife",
+    "regenerator-runtime": "^0.13.5"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
