--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "ember-cli-polymer-bundler",
   "dependencies": {
     "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "polymer": "^2.6.0",
+    "webcomponentsjs": "^1.2.0",
     "paper-styles": "PolymerElements/paper-styles#^2.0.0",
     "vaadin-date-picker": "^2.0.6",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
