--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
     "polymer-bundler": "^3.1.1",
-    "polymer-project-builder": "^1.1.0"
+    "polymer-project-builder": "git+https://github.com/BBVAEngineering/polymer-project-builder.git#feature/wrap-program-block-scopes-in-iife"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
