--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:ember": "COVERAGE=true ember test",
     "clean-coverage": "rm -rf coverage",
     "merge-coverage": "cp coverage/ember/coverage-final.json coverage/ember.json && cp coverage/node/coverage-final.json coverage/node.json && nyc merge coverage coverage/coverage-final.json",
-    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 85 --functions 85 --branches 85 --lines 85",
+    "check-coverage": "istanbul check-coverage coverage/coverage-final.json --statements 98 --functions 97 --branches 93 --lines 98",
     "commit": "git-cz",
     "posttest": "npm run merge-coverage && npm run report-coverage && npm run check-coverage",
     "report-coverage": "istanbul report --include=coverage/coverage-final.json text",
@@ -76,7 +76,10 @@
     "test": "tests"
   },
   "dependencies": {
+    "@wctools/polymer-project-builder": "^1.0.0",
     "autoprefixer": "^9.4.7",
+    "broccoli-caching-writer": "^3.0.3",
+    "broccoli-funnel": "^3.0.3",
     "broccoli-merge-trees": "^3.0.0",
     "broccoli-plugin": "^1.3.0",
     "deep-extend": "^0.6.0",
@@ -87,8 +90,7 @@
     "parse5": "^5.1.0",
     "path": "^0.12.7",
     "polymer-analyzer": "^2.3.0",
-    "polymer-bundler": "^3.1.1",
-    "@wctools/polymer-project-builder": "^1.0.0"
+    "polymer-bundler": "^3.1.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
