--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ install:
   - bower install
 
 script:
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip_cleanup
+  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
   - npm run test:node
 
 stages:
