--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: node_js
+os: linux
 node_js: stable
-sudo: false
 dist: trusty
 
 addons:
@@ -66,13 +66,8 @@ before_install:
   - npm install -g npm@6
   - npm --version
 
-install:
-  - npm ci
-  - bower install
-
 script:
   - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
-  - npm run test:node
 
 stages:
   - "Tests"
