--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,10 @@ before_install:
   - npm install -g npm@6
   - npm --version
 
+install:
+  - npm ci
+  - bower install
+
 script:
   - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
 
