--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "commitizen": "^3.0.5",
     "console-ui": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
-    "ember-cli": "~3.7.1",
+    "ember-cli": "^3.0.0",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
@@ -46,10 +46,10 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.7.0",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^0.2.23",
+    "ember-resolver": "^7.0.0",
+    "ember-source": "~3.8.0",
+    "ember-source-channel-url": "^2.0.1",
+    "ember-try": "^1.2.1",
     "eslint": "^5.12.0",
     "eslint-config-bbva": "^2.0.3",
     "eslint-plugin-ember": "^6.1.0",
@@ -90,7 +90,7 @@
     "deep-extend": "^0.6.0",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.0.0",
     "html-postcss": "^0.1.2",
     "parse5": "^5.1.0",
     "path": "^0.12.7",
