chore(travis): ensure semantic-release packages are installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
         provider: script
         cleanup: true
         script:
-          - npx semantic-release
+          - npx -p @semantic-release/changelog -p @semantic-release/git -p semantic-release semantic-release
 
 before_install:
   - npm config set spin false
