--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "polyfills"
   ],
   "scripts": {
+    "postinstall": "npx bower install",
     "build": "ember build --environment=production",
     "start": "ember server",
     "lint": "npm run lint:js && npm run lint:hbs",
