fix(travis): removed unnecesary install phase

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@
         before_install:
           - npm config set spin false
           - npm install -g npm@6
-          - npm install bower
+          - npm install -g bower
           - npm install -g codecov
           - npm install -g greenkeeper-lockfile@1
           - npm install -g @commitlint/travis-cli
@@ -62,9 +62,6 @@
     - npm config set spin false
     - npm install -g npm@6
     - npm --version
-  
-    install:
-      - npm ci
   
   script:
     - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip_cleanup
