--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
   "dependencies": {
     "@wctools/polymer-project-builder": "^1.0.0",
     "autoprefixer": "^9.4.7",
-    "broccoli-caching-writer": "^3.0.3",
-    "broccoli-funnel": "^3.0.3",
-    "broccoli-merge-trees": "^3.0.0",
-    "broccoli-plugin": "^1.3.0",
+    "broccoli-caching-writer": "3.0.3",
+    "broccoli-funnel": "3.0.3",
+    "broccoli-merge-trees": "3.0.2",
+    "broccoli-plugin": "1.3.1",
     "deep-extend": "^0.6.0",
     "ember-cli-babel": "^7.18.0",
     "fs-extra": "^8.0.0",
     "html-postcss": "^0.1.2",
     "parse5": "^5.1.0",
     "path": "^0.12.7",
-    "polymer-analyzer": "^2.3.0",
-    "polymer-bundler": "^3.1.1"
+    "polymer-analyzer": "2.7.0",
+    "polymer-bundler": "3.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
